[tool.poetry]
name = "annie"
version = "0.1.0"
description = ""
authors = [
    "Harry Lees <harry.lees@gmail.com>",
    "Siddhant Jogai <siddhantjogai@protonmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
